<resources>
    <string name="app_name">Rates BR</string>
    <string name="stock_exchanges">Bolsas de valores</string>
    <string name="stocks">Bolsas</string>
    <string name="bitcoins">Bitcoins</string>
    <string name="conversion">Conversão</string>
    <string name="coins">Moedas</string>
    <string name="search">Pesquise aqui…</string>
    <string name="quantity">Quantidade</string>
    <string name="hello_welcome">Olá, seja bem-vindo!</string>
    <string name="before_continuing_we_want">Antes de continuar, queremos que você conheça um pouco de nossas funções!</string>
    <string name="in_this_app_you_can">Neste app você pode</string>
    <string name="make_the_conversion_of_the_chosen_currency">Efetuar a conversão das principais moedas para o Real!</string>
    <string name="use_the_app_offline_with_the_latest_data_received">Utilizar o app de forma offline, com os últimos dados recebidos!</string>
    <string name="follow_the_index_of_stock_exchanges">Acompanhar o índice de bolsas de valores pelo mundo!</string>
    <string name="follow_the_index_of_the_price_bitcoin">Acompanhar a cotação do bitcoin nas principais corretoras!</string>
    <string name="thanks_for_using_our_app">Obrigado por utilizar o nosso app!</string>
    <string name="start">Iniciar</string>
    <string name="previous">Anterior</string>
    <string name="next">Próximo</string>
    <string name="brl_symbol">R$</string>
    <string name="value_for_conversion">Valor para conversão</string>
    <string name="result">Resultado</string>
    <string name="swipe_down_to_try_again">Deslize para baixo para tentar novamente.</string>
    <string name="try_again">Tentar Novamente</string>
    <string name="full_name">Nome completo</string>
    <string name="localization">Localização</string>
    <string name="points">Pontuação</string>
    <string name="variation_last_hour_variation">Variação (última hora útil)</string>
    <string name="date_time_data">Data e hora dos dados</string>
    <string name="stock_popup_full_location">%1$s, %2$s</string>
    <string name="popup_date_time">%1$s às %2$s</string>
    <string name="popup_currency_buy">%1$s - %2$s</string>
    <string name="details">Detalhes</string>
    <string name="buy_coin">Moeda de compra</string>
    <string name="unitary_value">Valor unitário</string>
    <string name="coin_term">Sigla da moeda</string>
    <string name="unitary_value_in_reais">Valor unitário (em reais)</string>
</resources>