<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_rates">

    <fragment
        android:id="@+id/nav_rates"
        android:name="com.omouravictor.ratesbr.presenter.rates.RatesFragment"
        android:label="@string/coins"
        tools:layout="@layout/fragment_rates" />

    <fragment
        android:id="@+id/nav_stocks"
        android:name="com.omouravictor.ratesbr.presenter.stocks.StocksFragment"
        android:label="@string/stock_exchanges"
        tools:layout="@layout/fragment_stocks" />

    <fragment
        android:id="@+id/nav_bitcoins"
        android:name="com.omouravictor.ratesbr.presenter.bitcoins.BitCoinsFragment"
        android:label="@string/bitcoins"
        tools:layout="@layout/fragment_bitcoins" />

</navigation>