<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewFirstWelcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewFirstWelcomeOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/hello_welcome"
        android:textColor="@color/black"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/textViewSecondWelcomeTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/before_continuing_we_want"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp" />
</LinearLayout>