<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/textViewSecondWelcomeOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_this_app_you_can"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewSecondWelcomeTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/make_the_conversion_of_the_chosen_currency"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/textViewSecondWelcomeOne"
                app:layout_constraintStart_toStartOf="@+id/textViewSecondWelcomeOne"
                app:layout_constraintTop_toBottomOf="@+id/textViewSecondWelcomeOne" />

            <TextView
                android:id="@+id/textViewSecondWelcomeThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/follow_the_index_of_stock_exchanges"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/textViewSecondWelcomeTwo"
                app:layout_constraintStart_toStartOf="@+id/textViewSecondWelcomeTwo"
                app:layout_constraintTop_toBottomOf="@+id/textViewSecondWelcomeTwo" />

            <TextView
                android:id="@+id/textViewSecondWelcomeFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/follow_the_index_of_the_price_bitcoin"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/textViewSecondWelcomeThree"
                app:layout_constraintStart_toStartOf="@+id/textViewSecondWelcomeThree"
                app:layout_constraintTop_toBottomOf="@+id/textViewSecondWelcomeThree" />

            <TextView
                android:id="@+id/textViewSecondWelcomeFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/use_the_app_offline_with_the_latest_data_received"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/textViewSecondWelcomeFour"
                app:layout_constraintStart_toStartOf="@+id/textViewSecondWelcomeFour"
                app:layout_constraintTop_toBottomOf="@+id/textViewSecondWelcomeFour" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</ScrollView>